update repo with work on analyzing subgroups of SL2Z and SL3Z

--- a/SL3_Z/Breadth_First_Search/Searching.ipynb
+++ b/SL3_Z/Breadth_First_Search/Searching.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -102,13 +102,9 @@
     "    \n",
     "    visited.add(matrix_to_tuple(start @ A))\n",
     "    visited.add(matrix_to_tuple(start @ B))\n",
-    "    # visited.add(matrix_to_tuple(start @ C))\n",
-    "    # visited.add(matrix_to_tuple(start @ D))\n",
     "    \n",
     "    start_tuple_A = start @ A\n",
     "    start_tuple_B = start @ B\n",
-    "    # start_tuple_C = start @ C\n",
-    "    # start_tuple_D = start @ D\n",
     "\n",
     "    queue = deque([[start_tuple_A, 0, \"0\"], [start_tuple_B, 1, \"1\"]])\n",
     "\n",
@@ -142,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +149,7 @@
        "       [-12,  48,  13]])"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,16 +160,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "52289"
+       "4"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,18 +180,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Target is NOT reachable from source within max depth\n",
-      "{(1, 0, 0, 0, 1, 0, 0, 0, 1), (1, -4, -1, 0, -2, -1, 0, 3, 1), (-1, 1, 0, -2, 1, 0, 9, -3, 1), (-3, 1, 0, -1, 1, 1, 0, -3, -5)}\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "x = np.array([[1, 0, 1], [0, -1, -1], [0, 1, 0]])\n",
+    "y = np.array([[0, 1, 0], [0, 0, 1], [1, 0, 0]])\n",
+    "z = np.array([[0, 1, 0], [1, 0, 0], [-1, -1, -1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# iterative deepening\n",
     "# code adapted from https://www.geeksforgeeks.org/iterative-deepening-searchids-iterative-deepening-depth-first-searchiddfs/\n",
@@ -216,13 +214,9 @@
     "        return False\n",
     "\n",
     "    # Recur for all the vertices adjacent to this vertex\n",
-    "    for i in generate_successors(src[1]):\n",
+    "    for i in [0, 1]:\n",
     "        new_mat = apply_mat(src[0], i)\n",
-    "        # new_tuple = matrix_to_tuple(new_mat)\n",
-    "        # if not new_tuple in visited:\n",
-    "            # visited.add(new_tuple)\n",
     "        if(DLS([new_mat, i, src[2] + str(i)], target, maxDepth-1)):\n",
-    "            # print([new_mat, i, src[2] + str(i)])\n",
     "            return True\n",
     "    return False\n",
     "\n",
@@ -236,42 +230,323 @@
     "        if (DLS(src, target, i)):\n",
     "            return True\n",
     "        i += 1\n",
-    " \n",
-    "# Create a graph given in the above diagram\n",
-    "# target = np.array([[1, 0, 1], [0, -1, -1], [0, 1, 0]])\n",
-    "target = A @ B @ A @ B\n",
-    "maxDepth = 20000\n",
-    "src = [A, 4, \"\"]\n",
+    "\n",
+    "# target = x\n",
+    "# target = A @ B @ A @ B\n",
+    "# # started with maxDepth=1,000,000\n",
+    "# # now doing maxDepth = 10,000\n",
+    "# maxDepth = 10000\n",
+    "# src = [I, 1, \"\"]\n",
     "\n",
     "\n",
-    "if IDDFS(src, target, maxDepth) == True:\n",
-    "    print(\"Target is reachable from source within max depth\")\n",
-    "else :\n",
-    "    print(\"Target is NOT reachable from source within max depth\")\n",
-    "    \n",
-    "# print(visited)\n"
+    "# if IDDFS(src, target, maxDepth) == True:\n",
+    "#     print(\"Target is reachable from source within max depth\")\n",
+    "# else :\n",
+    "#     print(\"Target is NOT reachable from source within max depth\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Target is NOT reachable from source within max depth\n"
+     ]
+    }
+   ],
+   "source": [
+    "target = x\n",
+    "# target = A @ B @ A @ B\n",
+    "# started with maxDepth=1,000,000\n",
+    "# now doing maxDepth = 1,000\n",
+    "# DLS was crashing with maxDepth=10,000 whne searching for A@B@A@B\n",
+    "# DLS took 1761 minutes before I cut if off with maxDepth=1000\n",
+    "maxDepth = 18\n",
+    "src = [I, 1, \"\"]\n",
+    "\n",
+    "\n",
+    "if DLS(src, target, maxDepth) == True:\n",
+    "    print(\"Target is reachable from source within max depth\")\n",
+    "else :\n",
+    "    print(\"Target is NOT reachable from source within max depth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Target is NOT reachable from source within max depth\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "array([[-1,  0,  0],\n",
-       "       [ 0, -1,  0],\n",
-       "       [ 6,  3,  1]])"
+       "23849627"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "A @ B @ A @ B"
+    "visited = set()\n",
+    "\n",
+    "def DLS_w_visited(src,target,maxDepth):\n",
+    "    if (src[0] == target).all(): \n",
+    "        print(src)\n",
+    "        return True\n",
+    "\n",
+    "    # If reached the maximum depth, stop recursing.\n",
+    "    if maxDepth <= 0: \n",
+    "        return False\n",
+    "\n",
+    "    # Recur for all the vertices adjacent to this vertex\n",
+    "    for i in [0, 1]:\n",
+    "        new_mat = apply_mat(src[0], i)\n",
+    "        new_tuple = matrix_to_tuple(new_mat)\n",
+    "        if new_tuple not in visited: \n",
+    "            visited.add(new_tuple)\n",
+    "            if(DLS_w_visited([new_mat, i, src[2] + str(i)], target, maxDepth-1)):\n",
+    "                return True\n",
+    "    return False\n",
+    "\n",
+    "target = x\n",
+    "\n",
+    "maxDepth = 70\n",
+    "src = [I, 1, \"\"]\n",
+    "\n",
+    "visited.add(matrix_to_tuple(I))\n",
+    "\n",
+    "\n",
+    "if DLS_w_visited(src, target, maxDepth) == True:\n",
+    "    print(\"Target is reachable from source within max depth\")\n",
+    "else :\n",
+    "    print(\"Target is NOT reachable from source within max depth\")\n",
+    "\n",
+    "len(visited)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matrix_to_tuple(y) in visited"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matrix_to_tuple(z) in visited"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-2  1 -2]\n",
+      " [-5 -1 -7]\n",
+      " [ 3  0  4]]\n",
+      "[[ -7  -3 -11]\n",
+      " [ -6  -4 -11]\n",
+      " [  6   3  10]]\n",
+      "[[-4 -4 -9]\n",
+      " [-1 -2 -4]\n",
+      " [ 3  3  7]]\n",
+      "[[1 0 0]\n",
+      " [0 1 0]\n",
+      " [0 0 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Is this infinite index? How about B @ A? \n",
+    "\n",
+    "print(A @ B)\n",
+    "print(A @ B @ A @ B)\n",
+    "print(A @ B@ A @ B@ A @ B)\n",
+    "print(A @ B@ A @ B@ A @ B@ A @ B)\n",
+    "\n",
+    "print(B@A)\n",
+    "print(B@A@B@A)\n",
+    "print(B@A@B@A@B@A)\n",
+    "print(B@A@B@A@B@A@B@A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(((A @ B@ A @ B@ A @ B@ A @ B)==I).all())\n",
+    "print(((B@A@B@A@B@A@B@A)==I).all())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  3   2   5]\n",
+      " [  7   6  14]\n",
+      " [-30 -27 -62]]\n",
+      "[[-127 -117 -267]\n",
+      " [-357 -328 -749]\n",
+      " [1581 1452 3316]]\n",
+      "[[   6810    6253   14281]\n",
+      " [  19103   17541   40061]\n",
+      " [ -84573  -77658 -177359]]\n",
+      "[[ -364229  -334449  -763830]\n",
+      " [-1021734  -938195 -2142693]\n",
+      " [ 4523445  4153599  9486181]]\n",
+      "[[  19481070   17888258   40854029]\n",
+      " [  54648223   50180073  114603566]\n",
+      " [-241939902 -222158403 -507375611]]\n",
+      "[[-1041959854  -956767095  2109858460]\n",
+      " [ 1372065496  1611047898 -1834691659]\n",
+      " [   55437915 -1002590613  1367566954]]\n",
+      "[[-104558995 -366191258  908092240]\n",
+      " [1714804808 1817551029 1431960142]\n",
+      " [-634188910  120697354  236017653]]\n",
+      "[[  -55011919 -1154952242 -1821649323]\n",
+      " [  678271143  1441795732  1072784490]\n",
+      " [  451719750  1673264265  1065593104]]\n",
+      "[[ -844862017  -804878529  2008586531]\n",
+      " [ 1418685333 -1777995368    13530543]\n",
+      " [-1719914831  -648119534 -1727768324]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = A @ B @ (A @ A) @ (B @ B)\n",
+    "\n",
+    "print(X)\n",
+    "print(X@X)\n",
+    "print(X@X@X)\n",
+    "print(X@X@X@X)\n",
+    "print(X@X@X@X@X)\n",
+    "print(X@X@X@X@X@X)\n",
+    "print(X@X@X@X@X@X@X)\n",
+    "print(X@X@X@X@X@X@X@X)\n",
+    "print(X@X@X@X@X@X@X@X@X)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-5.34857611e+01,  5.21605394e-01, -3.58442705e-02])"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.eig(X)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1. +0.j       , -0.5+0.8660254j, -0.5-0.8660254j])"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.eig(A)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  6., -11.,  -2.],\n",
+       "       [ 14., -36.,  -7.],\n",
+       "       [ -9.,  21.,   4.]])"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.inv(X)"
    ]
   }
  ],
