restructure deep mcts weights filesystem

--- a/Euclidean/Alex/deep_mcts.ipynb
+++ b/Euclidean/Alex/deep_mcts.ipynb
@@ -516,8 +516,8 @@
    "source": [
     "save = False\n",
     "if save:\n",
-    "    torch.save(value_fn_2.state_dict(), \"deep_mcts_2_v_weights.pth\")\n",
-    "    torch.save(policy_fn_2.state_dict(), \"deep_mcts_2_p_weights.pth\")"
+    "    torch.save(value_fn_2.state_dict(), \"trained_weights/deep_mcts_2_v_weights.pth\")\n",
+    "    torch.save(policy_fn_2.state_dict(), \"trained_weights/deep_mcts_2_p_weights.pth\")"
    ]
   },
   {
@@ -588,8 +588,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "init_policy_fp = \"weights/deep_mcts_4_p_weights.pth\"\n",
-    "init_value_fp = \"weights/deep_mcts_4_v_weights.pth\"\n",
+    "init_policy_fp = \"start_weights/deep_mcts_4_p_weights.pth\"\n",
+    "init_value_fp = \"start_weights/deep_mcts_4_v_weights.pth\"\n",
     "trained_policy_fp = \"trained_weights/deep_mcts_4_p_weights_f.pth\"\n",
     "trained_value_fp = \"trained_weights/deep_mcts_4_v_weights_f.pth\""
    ]
