--- a/Euclidean/Alex/supervised_simple.ipynb
+++ b/Euclidean/Alex/supervised_simple.ipynb
@@ -148,8 +148,8 @@
     "   x = torch.tensor(np.loadtxt(fname, delimiter=\",\"), dtype=torch.float)\n",
     "   return x[:,0:2], x[:, -1]\n",
     "\n",
-    "train_X, train_Y = get_data(\"train_data/train.csv\")\n",
-    "test_X, test_Y = get_data(\"test_data/test.csv\")\n",
+    "train_X, train_Y = get_data(\"train_data/train_simple.csv\")\n",
+    "test_X, test_Y = get_data(\"test_data/test_simple.csv\")\n",
     "\n",
     "train_Y.reshape(-1, 1)\n",
     "test_Y.reshape(-1, 1)"
@@ -272,7 +272,7 @@
    "source": [
     "SAVE_WEIGHTS = False\n",
     "if SAVE_WEIGHTS:\n",
-    "    torch.save(model.state_dict(), \"weights/supervised_simple_weights.pth\")"
+    "    torch.save(model.state_dict(), \"trained_weights/supervised_simple_weights.pth\")"
    ]
   }
  ],
