--- a/SL2_Z/Data_Generation/generate_SL2_Z.ipynb
+++ b/SL2_Z/Data_Generation/generate_SL2_Z.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +12,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Defines steps (directions) for random walk as matrices $X$, $Y$, $Z$\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "X &= \\begin{bmatrix}0 & -1 \\\\ 1 & 0\\end{bmatrix} \\\\\n",
+    "Y &= \\begin{bmatrix}1 & 1 \\\\ 0 & 1\\end{bmatrix} \\\\\n",
+    "Z &= \\begin{bmatrix}1 & -1 \\\\ 0 & 1\\end{bmatrix}\n",
+    "\\end{align}\n",
+    "$$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,28 +43,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array([[ 0, -1],\n",
-       "       [ 1,  0]])"
+       "       [ 1,  3]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x"
+    "x @ y @ y @ y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +74,7 @@
        "       [ 0.,  1.]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -144,14 +158,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "cols = {\n",
     "    'val1': [],\n",
     "    'val2': [],\n",
-    "    'val3' : [],\n",
+    "    'val3': [],\n",
     "    'val4': [],\n",
     "}\n",
     "\n",
@@ -159,8 +173,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Random walk through ${\\rm SL}_2(\\mathbb{Z})$ to generate matrices in group"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +354,7 @@
        "[10000 rows x 4 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +450,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
