refactor sl2z q learning into lib

--- a/SL2_Z/Q_learning/Q_learning_for_SL2_Z.ipynb
+++ b/SL2_Z/Q_learning/Q_learning_for_SL2_Z.ipynb
@@ -13,7 +13,12 @@
     "import pandas as pd\n",
     "from collections import defaultdict\n",
     "import matplotlib.pyplot as plt\n",
-    "import math\n"
+    "import math\n",
+    "\n",
+    "import sys\n",
+    "sys.path.append('../')\n",
+    "\n",
+    "from util import *\n"
    ]
   },
   {
@@ -22,24 +27,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def matrix_to_tuple(matrix):\n",
-    "    return (matrix[0][0], matrix[0][1], \n",
-    "            matrix[1][0], matrix[1][1]) \n",
+    "max_reward = 100\n",
+    "step_penalty = -1\n",
     "\n",
-    "# index 12 according to alex's paper. Is it congruent to identity mod 2 or mod 4?\n",
-    "# can generate with any coset I want by starting at a representative from each coset and see if we get our way back to it\n",
-    "A = np.array([[1, 2], [0, 1]])\n",
-    "B = np.array([[1, 0], [2, 1]])\n",
-    "\n",
-    "# elements on the diagonal are 1 mod 4. \n",
-    "# elements not on the diagonal are 0 mod 2. \n",
-    "\n",
-    "# C is the inverse of A\n",
-    "# D is the inverse of B\n",
-    "C = np.linalg.inv(A)\n",
-    "D = np.linalg.inv(B)\n",
-    "\n",
-    "identity = np.array([[1, 0], [0, 1]])"
+    "def getReward(matrix):\n",
+    "    if (matrix==np.identity(2)).all():\n",
+    "        return max_reward\n",
+    "    else:\n",
+    "        return step_penalty"
    ]
   },
   {
@@ -48,52 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "def epsilon_greedy_search(Epsilon, qtable, state):\n",
-    "    if (random.random() < Epsilon):\n",
-    "        # 0 is 'apply matrix A', 1 is 'apply matrix B'\n",
-    "        # 2 is 'apply matrix C', 3 is 'apply matrix D'\n",
-    "        return random.choice([0, 1, 2, 3])\n",
-    "    else:\n",
-    "        # get the best move for the current state\n",
-    "        return best_move_for_a_state(Q_table=qtable, state=state)\n",
-    "    \n",
-    "# I would like to return the best move for a given state\n",
-    "def best_move_for_a_state(Q_table, state):\n",
-    "    # vals = Q_table[(state[0][1], state[0][2], state[1][2])]\n",
-    "\n",
-    "    apply_A = state @ A\n",
-    "    apply_B = state @ B\n",
-    "    apply_C = state @ C\n",
-    "    apply_D = state @ D\n",
-    "\n",
-    "    vals = [0, 0, 0, 0]\n",
-    "    vals[0] = Q_table[matrix_to_tuple(apply_A)]\n",
-    "    vals[1] = Q_table[matrix_to_tuple(apply_B)]\n",
-    "    vals[2] = Q_table[matrix_to_tuple(apply_C)]\n",
-    "    vals[3] = Q_table[matrix_to_tuple(apply_D)]\n",
-    "\n",
-    "    # if we haven't visited this state before, return a random choice of 0, 1, 2, or 3\n",
-    "    if vals==[0, 0, 0, 0]:\n",
-    "        return random.choice([0, 1, 2, 3])\n",
-    "    \n",
-    "    # if we have visited this state before, return the current best choice\n",
-    "    return np.argmax(vals)\n",
-    "\n",
-    "# over a given state, return the maximum value of the table for that state\n",
-    "def max_a_prime(Q_table, state):\n",
-    "    apply_A = state @ A\n",
-    "    apply_B = state @ B\n",
-    "    apply_C = state @ C\n",
-    "    apply_D = state @ D\n",
-    "\n",
-    "    vals = [0, 0, 0, 0]\n",
-    "    vals[0] = Q_table[matrix_to_tuple(apply_A)]\n",
-    "    vals[1] = Q_table[matrix_to_tuple(apply_B)]\n",
-    "    vals[2] = Q_table[matrix_to_tuple(apply_C)]\n",
-    "    vals[3] = Q_table[matrix_to_tuple(apply_D)]\n",
-    "    \n",
-    "    return max(vals)"
+    "df = pd.read_csv(\"../Data_Generation/Data_files/sl2_Z.csv\")"
    ]
   },
   {
@@ -102,98 +52,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "max_reward = 100\n",
-    "step_penalty = -1\n",
-    "\n",
-    "def getReward(matrix):\n",
-    "    if (matrix==identity).all():\n",
-    "        return max_reward\n",
-    "    else:\n",
-    "        return step_penalty"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv(\"../Data_Generation/Data_files/sl2_Z.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_next_step(oldObs, action):\n",
-    "    # action is always either 0, 1, 2, or 3\n",
-    "    next_state = []\n",
-    "    if action==0:\n",
-    "        next_state = oldObs @ A\n",
-    "    elif action==1:\n",
-    "        next_state = oldObs @ B\n",
-    "    elif action==2:\n",
-    "        next_state = oldObs @ C\n",
-    "    else:\n",
-    "        next_state = oldObs @ D\n",
-    "    curReward = getReward(next_state)\n",
-    "    done = curReward==max_reward\n",
-    "    return (next_state, curReward, done)\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def are_we_done_yet(my_matrix):\n",
-    "    return (my_matrix==identity).all()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def apply_mat(mat, index):\n",
-    "    if index==0:\n",
-    "        return mat @ A\n",
-    "    elif index==1:\n",
-    "        return mat @ B\n",
-    "    elif index==2:\n",
-    "        return mat @ C\n",
-    "    elif index==3:\n",
-    "        return mat @ D\n",
-    "    assert(1==2)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def tuple_to_matrix(tuple):\n",
-    "    return np.array([[tuple[0], tuple[1]], [tuple[2], tuple[3]]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "df[(df['val1'] % 2 == 1) & (df['val2'] % 2 == 0) & (df['val3'] % 2 == 0) & (df['val4'] % 2 == 1)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,11 +70,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "EPISODES = 30000\n",
+    "env = TabularQEnv(k_sl2z_2s_gen, defaultdict(lambda: 0), getReward, max_reward)\n",
+    "\n",
+    "EPISODES = 3000\n",
     "LEARNING_RATE = .9\n",
     "DISCOUNT_FACTOR = .99\n",
     "EPSILON = 1\n",
@@ -220,9 +86,7 @@
     "\n",
     "# starts with an estimate of zero reward for each state.\n",
     "# adapted from ChatGPT\n",
-    "Q_table = defaultdict(lambda: 0)\n",
-    "\n",
-    "episode_reward_record = deque(maxlen=100)\n",
+    "episode_reward_record = deque(maxlen=500)\n",
     "\n",
     "for i in range(EPISODES):\n",
     "    episode_reward = 0\n",
@@ -240,15 +104,7 @@
     "    while (not done):\n",
     "        # perform an epsilon greedy action \n",
     "        # Q(s, a) = (1-LEARNING_RATE)Q(s, a) + (LEARNING_RATE)(r + DISCOUNT_FACTOR(max a'(Q(s', a'))))\n",
-    "        action = epsilon_greedy_search(Epsilon=EPSILON, qtable=Q_table, state=obs)\n",
-    "\n",
-    "        oldObs = obs\n",
-    "        obs,reward,done = get_next_step(oldObs, action)\n",
-    "\n",
-    "        # if done:\n",
-    "        #     assert(1==2)\n",
-    "        \n",
-    "        Q_table[matrix_to_tuple(obs)] = (1-LEARNING_RATE) * Q_table[matrix_to_tuple(obs)] + (LEARNING_RATE) * (reward + DISCOUNT_FACTOR * (max_a_prime(Q_table, obs)))\n",
+    "        obs, reward, done = env.step(LEARNING_RATE, DISCOUNT_FACTOR, EPSILON, obs)\n",
     "\n",
     "        episode_reward += reward # update episode reward\n",
     "\n",
@@ -263,40 +119,24 @@
     "    # record the reward for this episode\n",
     "    episode_reward_record.append(episode_reward) \n",
     "\n",
-    "    if i%100 ==0 and i>0:\n",
-    "        print(\"Average reward for the last 100 iterations: \" + str(sum(list(episode_reward_record))/100))\n",
-    "        print(\"epsilon: \" + str(EPSILON) )\n",
+    "    if (i+1)%500 ==0 and i>0:\n",
+    "        print(\"Episode {i}\\teps: {eps:.3f}\\tAvg rwd: {rwd:.3f}\".format(i=i+1, eps=EPSILON, rwd=sum(list(episode_reward_record))/500))\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def access_Q_table(mat):\n",
-    "    return Q_table[matrix_to_tuple(mat)]"
+    "    return env.Q_table[matrix_to_tuple(mat)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(access_Q_table(A @ A @ A))\n",
-    "print(access_Q_table(B @ A @ B))\n",
-    "print(access_Q_table(B @ B @ A))\n",
-    "print(access_Q_table(C @ C @ C))\n",
-    "print(access_Q_table(C @ C @ B))\n",
-    "print(access_Q_table(D @ D @ C))\n",
-    "print(access_Q_table(D @ D @ D))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,83 +145,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "access_Q_table(A)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# test with the other dataframe. \n",
-    "test_df = pd.read_csv(\"../Data_Generation/Data_files/sl2_Z_test.csv\")"
+    "test_df = pd.read_csv(\"../Data_Generation/Data_files/sl2_Z_test.csv\")\n",
+    "test_df['num_moves_Q_learning_needs'] = test_df.apply(lambda row: env.play(df_row_to_mat(row)), axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def matrix_to_num_steps(cur_matrix):\n",
-    "    index = 1\n",
-    "    for i in range(50):\n",
-    "        if (cur_matrix==identity).all():\n",
-    "            return i\n",
-    "        outputs = [0, 0, 0, 0]\n",
-    "        outputs[0] = Q_table[matrix_to_tuple(cur_matrix@ A)]\n",
-    "        outputs[1] = Q_table[matrix_to_tuple(cur_matrix@ B)]\n",
-    "        outputs[2] = Q_table[matrix_to_tuple(cur_matrix@ C)]\n",
-    "        outputs[3] = Q_table[matrix_to_tuple(cur_matrix@ D)]\n",
-    "        index = np.argmax(outputs)\n",
-    "        if index==0:\n",
-    "            cur_matrix = cur_matrix @ A\n",
-    "        elif index==1:\n",
-    "            cur_matrix = cur_matrix @ B\n",
-    "        elif index==2:\n",
-    "            cur_matrix = cur_matrix @ C\n",
-    "        elif index==3:\n",
-    "            cur_matrix = cur_matrix @ D\n",
-    "    return 100"
+    "test_df['num_moves_Q_learning_needs'] = test_df.apply(lambda row: env.play(df_row_to_mat(row)), axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "def test_Q_learning(cur_row):\n",
-    "    cur_matrix = np.array([\n",
-    "        [int(cur_row['val1']), int(cur_row['val2'])], \n",
-    "        [int(cur_row['val3']), int(cur_row['val4'])]\n",
-    "        ])\n",
-    "    return matrix_to_num_steps(cur_matrix)\n",
-    "\n",
-    "test_df['num_moves_Q_learning_needs'] = test_df.apply(test_Q_learning, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Of these, the proportion of times where we learned a path that was < 20 moves: \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print(\"The proportion of starting positions in the test dataset that we can find a route to the origin that's <50 steps: \")\n",
-    "sum(test_df['num_moves_Q_learning_needs']!=100)/test_df.shape[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "sum(test_df['num_moves_Q_learning_needs']!=100)/test_df.shape[0]\n",
+    "\n",
     "print(\"Of these, the proportion of times where we learned a path that was < 20 moves: \")\n",
     "# encouraging because all of these were generated as sequences of 30 moves\n",
     "# so we've found significantly faster paths back to the origin for almost all moves that we find a path to the origin \n",
@@ -390,109 +198,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filtered_df = test_df[test_df['num_moves_Q_learning_needs']!=100]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def first_matrix_to_apply(cur_row):\n",
-    "    outputs = [0, 0, 0, 0]\n",
-    "    cur_matrix = np.array([\n",
-    "        [int(cur_row['val1']), int(cur_row['val2'])], \n",
-    "        [int(cur_row['val3']), int(cur_row['val4'])]\n",
-    "        ])\n",
-    "    outputs[0] = Q_table[matrix_to_tuple(cur_matrix@ A)]\n",
-    "    outputs[1] = Q_table[matrix_to_tuple(cur_matrix@ B)]\n",
-    "    outputs[2] = Q_table[matrix_to_tuple(cur_matrix@ C)]\n",
-    "    outputs[3] = Q_table[matrix_to_tuple(cur_matrix@ D)]\n",
-    "    return np.argmax(outputs)\n",
-    "\n",
-    "filtered_df['first_move_by_Q_learning'] = filtered_df.apply(first_matrix_to_apply, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filtered_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# filtered_df = filtered_df.drop('num_moves_Q_learning_needs', axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bound = int(filtered_df.shape[0] * 0.6)\n",
-    "plus_one = bound+1\n",
-    "train = filtered_df.iloc[1:bound]\n",
-    "test = filtered_df.iloc[plus_one:filtered_df.shape[0]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_Q_value(row):\n",
-    "    return Q_table[(int(row['val1']), \n",
-    "    int(row['val2']), \n",
-    "    int(row['val3']),\n",
-    "    int(row['val4'])\n",
-    "    )]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train.to_csv(\"../Data_Generation/Data_files/train_rows_SL2Z_Q_learn.csv\", index=False)\n",
-    "test.to_csv(\"../Data_Generation/Data_files/test_rows_SL2Z_Q_learn.csv\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def mod_2_is_identity(test_tuple):\n",
-    "    assert len(test_tuple)==4\n",
-    "    return (test_tuple[0] % 2 == 1 and \n",
-    "            test_tuple[1] % 2 == 0 and \n",
-    "            test_tuple[2] % 2 == 0 and \n",
-    "            test_tuple[3] % 2 == 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mod_2_is_identity([1, 2, 1, 1])"
+    "append_info_states_csv(\"../Data_Generation/Data_files/sl2_Z_test.csv\", \n",
+    "                       \"../Data_Generation/Data_files/train_rows_SL2Z_Q_learn.csv\", \n",
+    "                       \"../Data_Generation/Data_files/test_rows_SL2Z_Q_learn.csv\")"
    ]
   }
  ],
@@ -512,7 +224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
