remove rendundant files

--- a/SL2_Z/Data_Generation/generate_SL2_Z.ipynb
+++ b/SL2_Z/Data_Generation/generate_SL2_Z.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,23 +27,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# NOTE: TO CHANGE GROUP/SUBGROUP GENERATED, MODIFY THESE GENERATORS AND FILE SAVE NAMES\n",
     "# these matrices generate SL3_Z, according to this: https://www-users.cse.umn.edu/~garrett/m/mfms/notes_2013-14/07_fund_dmn.pdf\n",
     "\n",
     "# x is rank 4, so we don't need to include its inverse\n",
+    "\n",
     "x = np.array([[0, -1], [1, 0]])\n",
     "y = np.array([[1, 1], [0, 1]])\n",
     "z = np.array([[1, -1], [0, 1]])\n",
     "\n",
-    "identity = np.array([[1, 0], [0, 1]])"
+    "identity = np.eye(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,14 +68,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "random.seed(42)\n",
     "np.random.seed(42)\n",
     "\n",
-    "for _ in range(10000):\n",
+    "for _ in range(100000):\n",
     "\n",
     "    first_pos = np.random.randint(0, 3, size=1)[0]\n",
     "\n",
@@ -109,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -142,38 +144,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-69.0</td>\n",
-       "      <td>-398.0</td>\n",
-       "      <td>-13.0</td>\n",
-       "      <td>-75.0</td>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>-3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2.0</td>\n",
+       "      <td>-3.0</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>-7.0</td>\n",
-       "      <td>-17.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>13.0</td>\n",
-       "      <td>-18.0</td>\n",
-       "      <td>-5.0</td>\n",
-       "      <td>7.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.0</td>\n",
+       "      <td>-3.0</td>\n",
+       "      <td>-10.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-4.0</td>\n",
+       "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>47.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>14.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>-27.0</td>\n",
+       "      <td>-4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
        "      <td>3.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>7.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -219,27 +221,27 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10000 rows × 4 columns</p>\n",
+       "<p>100000 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    val1   val2  val3  val4\n",
-       "0  -69.0 -398.0 -13.0 -75.0\n",
-       "0    2.0    5.0  -7.0 -17.0\n",
-       "0   13.0  -18.0  -5.0   7.0\n",
-       "0    0.0    1.0  -1.0  -4.0\n",
-       "0   47.0   10.0  14.0   3.0\n",
-       "..   ...    ...   ...   ...\n",
-       "0    3.0    8.0   4.0  11.0\n",
-       "0   -2.0    5.0  -3.0   7.0\n",
-       "0   -1.0    3.0   3.0 -10.0\n",
-       "0    1.0    9.0  -4.0 -35.0\n",
-       "0   -1.0    2.0   0.0  -1.0\n",
+       "    val1  val2  val3  val4\n",
+       "0   -2.0  -3.0   1.0   1.0\n",
+       "0   -3.0   4.0   5.0  -7.0\n",
+       "0   -3.0 -10.0   1.0   3.0\n",
+       "0   47.0   7.0 -27.0  -4.0\n",
+       "0    3.0   5.0   4.0   7.0\n",
+       "..   ...   ...   ...   ...\n",
+       "0    3.0   8.0   4.0  11.0\n",
+       "0   -2.0   5.0  -3.0   7.0\n",
+       "0   -1.0   3.0   3.0 -10.0\n",
+       "0    1.0   9.0  -4.0 -35.0\n",
+       "0   -1.0   2.0   0.0  -1.0\n",
        "\n",
-       "[10000 rows x 4 columns]"
+       "[100000 rows x 4 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +337,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
